--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>World Trigger OC Template</title>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <style>
             @font-face {
                 font-family: 'crusader';
