--- a/ocmaker.html
+++ b/ocmaker.html
@@ -62,6 +62,11 @@
 			hr {
 				width:50%;
 			}
+			a {
+				text-decoration: none;
+				color:springgreen;
+				font-family:arial;
+			}
         </style>
         <script>
             var ctx;
@@ -781,6 +786,9 @@
     </head>
     <body align="center">
         <h1>World Trigger Character</h1>
+		<a href="OcEmblemTemplate.png" download="Oc Emblem Template.png">Download Emblem Template</a>
+		<br />
+		<br />
         <div id="form" align="center">
             <input type="text" placeholder="OC Name" id="name" style="text-transform: uppercase"/>
             <input type="number" placeholder="Squad Ranking" min="1" id="ranking"/>
