--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             position:absolute;
             top:10px;
             font-weight:bold;
-            cursor:pointer;
 		}
 		#nav button {
 			background-color:black;
@@ -38,7 +37,8 @@
 			color:cyan;
 		}
 		#nav button:hover {
-			background-color:gray;
+			background-color:#4CAF50;
+			color:white;
 		}
 		#nav button:focus {
             outline:none;
@@ -55,9 +55,10 @@
   <body align="center">
 	<div id="nav">
 		<h1>Hello There</h1>
-		<button id="creator"><a href="https://emperorbob7.github.io/ocmaker">OC CREATOR</a></button>
-		<button align="right"><a href="https://emperorbob7.github.io/randomizer">RANDOMIZER</a></button>
-		<button id="rigged"><a href="https://emperorbob7.github.io/rigged">RIGGED GAME</a></button>
+		<a href="https://emperorbob7.github.io/ocmaker"><button id="creator">OC CREATOR</button></a>
+		<a href="https://emperorbob7.github.io/randomizer"><button id="randomizer">RANDOMIZER</button></a>
+		<a href="https://emperorbob7.github.io/rigged"><button id="rigged">RIGGED GAME</button></a>
+		<a href="https://emperorbob7.github.io/bobbf"><button id="bobbf">BOBBF</button></a>
 	</div>
 	<div id="main">
 		<h2 style="margin-top:10px;">Please Use The Nav Buttons To Find Your Way Around</h2>
