--- a/ocmaker.html
+++ b/ocmaker.html
@@ -77,7 +77,7 @@
             var trion = "0", attack = "0", defense = "0", mobility = "0", skill = "0", range = "0", command = "0", tactics = "0", total = "0", reactions = "0", strategy = "0", specialtech = "0", recon = "0", attacker = "0", shooter = "0", sniper = "0", gunner = "0";
             var img = new Image();
 			var blocked = new Image();
-            var switchbox = new Image(), free = new Image(), opt = new Image(), shi = new Image(), sco = new Image(), ray = new Image(), kog = new Image(), speark = new Image(), egret = new Image(), ibis = new Image(), light = new Image(), viper = new Image(), hound = new Image(), aster = new Image(), mete = new Image(), escudo = new Image(), handgun = new Image(), arifle = new Image(), shot = new Image(), grenade = new Image();
+            var soget = new Image(), switchbox = new Image(), free = new Image(), opt = new Image(), shi = new Image(), sco = new Image(), ray = new Image(), kog = new Image(), speark = new Image(), egret = new Image(), ibis = new Image(), light = new Image(), viper = new Image(), hound = new Image(), aster = new Image(), mete = new Image(), escudo = new Image(), handgun = new Image(), arifle = new Image(), shot = new Image(), grenade = new Image();
             opt.src = "https://cdn.discordapp.com/attachments/571784589882949692/588223959292706817/1560313908255.png";
             shi.src = "https://cdn.discordapp.com/attachments/571784589882949692/588226241895858176/1560314451213.png";
             sco.src = "https://cdn.discordapp.com/attachments/571784589882949692/588228644481269761/1560315030622.png";
@@ -100,6 +100,7 @@
 			switchbox.src = "https://cdn.discordapp.com/attachments/571784589882949692/596787826511577119/importantIcon.png";
 			img.src = "https://cdn.discordapp.com/attachments/571784589882949692/606222154140221441/importantIcon.png";
 			blocked.src = "https://cdn.discordapp.com/attachments/571784589882949692/597287816635875338/importantIcon.png";
+			soget.src = "https://cdn.discordapp.com/attachments/571784589882949692/610257477631606811/importantIcon.png";
             img.onload = function() {
 				window.onload = function() {
 					begin();
@@ -120,7 +121,7 @@
 			texts[59] = "ATTACKER TRIGGER";
             texts[60] = "OPTION TRIGGER";
             var trigNames = ["","SHIELD","BAGWORM","RAYGUST","KOGETSU","SCORPION","KOGETSU: SPEAR","ASTEROID","HOUND","METEORA","VIPER","EGRET","IBIS","LIGHTNING","GEN'YO","LEAD BULLET","SENKU","STARMAKER","THRUSTER","ESCUDO","CHAMELEON","DUMMY BEACON","GRASSHOPPER","SILENCER","SPIDER","TELEPORTER","Assault Rifle: Viper","Assault Rifle: Hound","Assault Rifle: Asteroid","Assault Rifle: Meteora","Assault Rifle: Gimlet","Assault Rifle: Salamander","Assault Rifle: Tomahawk","Grenade Gun: Viper","Grenade Gun: Hound","Grenade Gun: Asteroid","Grenade Gun: Meteora","Grenade Gun: Gimlet","Grenade Gun: Salamander","Grenade Gun: Tomahawk","Shotgun: Viper","Shotgun: Hound","Shotgun: Asteroid","Shotgun: Meteora","Shotgun: Gimlet","Shotgun: Salamander","Shotgun: Tomahawk","Handgun: Viper","Handgun: Hound","Handgun: Asteroid","Handgun: Meteora","Handgun: Gimlet","Handgun: Salamander","Handgun: Tomahawk","SWITCHBOX","BAGWORM TAG","IDATEN","GEIST","CONNECTOR","SOUGETSU","FULL ARMS"];
-            var trigImg = ["",shi,opt,ray,kog,sco,speark,aster,hound,mete,viper,egret,ibis,light,opt,opt,opt,opt,opt,escudo,opt,opt,opt,opt,opt,opt,arifle,arifle,arifle,arifle,arifle,arifle,arifle,grenade,grenade,grenade,grenade,grenade,grenade,grenade,shot,shot,shot,shot,shot,shot,shot,handgun,handgun,handgun,handgun,handgun,handgun,handgun,switchbox,opt,opt,opt,opt,opt,opt];
+            var trigImg = ["",shi,opt,ray,kog,sco,speark,aster,hound,mete,viper,egret,ibis,light,opt,opt,opt,opt,opt,escudo,opt,opt,opt,opt,opt,opt,arifle,arifle,arifle,arifle,arifle,arifle,arifle,grenade,grenade,grenade,grenade,grenade,grenade,grenade,shot,shot,shot,shot,shot,shot,shot,handgun,handgun,handgun,handgun,handgun,handgun,handgun,switchbox,opt,opt,opt,opt,soget,opt];
             //0-25 is regular 3-6 Attacker 7-10 Shooter 11-13 Sniper 14-18 Attachments 19-25 Extras 26-32 Assault Rifles 33-39 Grenade Launchers 40-46 Shotguns 47-53 Handguns
             
             function begin() {
@@ -801,12 +802,12 @@
 			function RNG() {
 			    var Arr = ["Shield","Bagworm","Raygust","Kogetsu","Scorpion","Kogetsu: Spear","Asteroid","Hound","Meteora","Viper","Egret","Ibis","Lightning","Gen'Yo","Lead Bullet","Senku","Starmaker","Thruster","Escudo","Chameleon","Dummy Beacon","Grasshopper","Spider","Teleporter","Switchbox","Idaten","Geist","Connector","Sogetsu","Full Arms","Assault Rifle: Viper","Assault Rifle: Hound","Assault Rifle: Asteroid","Assault Rifle: Meteora","Grenade Gun: Viper","Grenade Gun: Hound","Grenade Gun: Asteroid","Grenade Gun: Meteora","Shotgun: Viper","Shotgun: Hound","Shotgun: Asteroid","Shotgun: Meteora","Handgun: Viper","Handgun: Hound","Handgun: Asteroid","Handgun: Meteora"];
 			    var Arr2 = ["Assault Rifle: Viper","Assault Rifle: Hound","Assault Rifle: Asteroid","Assault Rifle: Meteora","Grenade Gun: Viper","Grenade Gun: Hound","Grenade Gun: Asteroid","Grenade Gun: Meteora","Shotgun: Viper","Shotgun: Hound","Shotgun: Asteroid","Shotgun: Meteora","Handgun: Viper","Handgun: Hound","Handgun: Asteroid","Handgun: Meteora"];
-			    var icons = [shi,opt,ray,kog,sco,speark,aster,hound,mete,viper,egret,ibis,light,opt,opt,opt,opt,opt,escudo,opt,opt,opt,opt,opt,opt,opt,opt,opt,opt,opt,arifle,arifle,arifle,arifle,grenade,grenade,grenade,grenade,shot,shot,shot,shot,handgun,handgun,handgun,handgun];
+			    var icons = [shi,opt,ray,kog,sco,speark,aster,hound,mete,viper,egret,ibis,light,opt,opt,opt,opt,opt,escudo,opt,opt,opt,opt,opt,opt,opt,opt,opt,soget,opt,arifle,arifle,arifle,arifle,grenade,grenade,grenade,grenade,shot,shot,shot,shot,handgun,handgun,handgun,handgun];
 			    var def = "DEFENSE TRIGGER", atk = "ATTACKER TRIGGER", optt = "OPTION TRIGGER", snip = "SNIPER TRIGGER", shoot = "SHOOTER TRIGGER", gunne = "GUNNER TRIGGER";
 			    var types = [def,optt,atk,atk,atk,atk,shoot,shoot,shoot,shoot,snip,snip,snip,optt,optt,optt,optt,optt,def,optt,optt,optt,optt,optt,optt,optt,optt,optt,optt,optt,gunne,gunne,gunne,gunne,gunne,gunne,gunne,gunne,gunne,gunne,gunne,gunne,gunne,gunne,gunne,gunne];
 			    for(var i = 1; i<=8; i++) {
-			        var Numb = Math.floor(Math.random()*34);
-			        if(Numb >= 30) {
+			        var Numb = Math.floor(Math.random()*33);
+			        if(Numb >= 31) {
 			           var Numb2 = Math.floor(Math.random()*12) + 34;
 			           triggers[i-1] = Numb2;
 			        }
@@ -926,7 +927,6 @@
         </script>
     </head>
     <body align="center">
-    	<button onclick="rngDraw()">Hit</button>
         <h1>World Trigger Character</h1>
 		<a href="OcEmblemTemplate.png" download="Oc Emblem Template.png">Download Emblem Template</a>
 		<br />
@@ -1602,6 +1602,7 @@
             </table>
             <br />
             <button onclick="draw()">Draw Image</button>
+			<button onclick="rngDraw()">Hit</button>
         </div>
         <!--0-25 is regular 3-6 Atacker 7-10 Shooter 11-13 Sniper 14-18 Attachments 19-25 Extras 26-32 Assault Rifles 33-39 Grenade Launchers 40-46 Shotguns 47-53 Handguns-->
         <canvas width="1280px" height="720px" style="border:2px solid black;" id="cv"></canvas>
