--- a/passwordalgorithm.html
+++ b/passwordalgorithm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Page Title</title>
+		<title>Password Algorithm</title>
 		<style>
 			* {
 				padding:0;
@@ -81,7 +81,6 @@
 				for(var i = 0; i<temp.length+1; i++) {
 					websiteName2 += temp.charAt(temp.length-i);
 				}
-				console.log(websiteName2);
 				string = name.substring(1,name.length-1) + name.charAt(0) + name.charAt(name.length-1);
 				string += year.substring(1,4) + year.charAt(0);
 				string += websiteName2 + websiteName1;
