--- a/passwordalgorithm.html
+++ b/passwordalgorithm.html
@@ -100,7 +100,7 @@
 			</tr>
 			<tr>
 				<td>Birth Year: </td>
-				<td><input type="text" id="birthYear" placeholder="2004" onkeypress="setTimeout(run,500)"/></td>
+				<td><input type="number" id="birthYear" placeholder="2004" onkeypress="setTimeout(run,500)" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" type = "number" maxlength = "4"/></td>
 			</tr>
 			<tr>
 				<td>Website Name: </td>
