--- a/passwordalgorithm.html
+++ b/passwordalgorithm.html
@@ -85,7 +85,7 @@
 				string += year.substring(1,4) + year.charAt(0);
 				string += websiteName2 + websiteName1;
 				string += code;
-				output.innerHTML = string;
+				output.innerHTML = string.toLowerCase();
 			}
 		</script>
 	</head>
