--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		<a href="https://emperorbob7.github.io/randomizer"><button id="randomizer">RANDOMIZER</button></a>
 		<a href="https://emperorbob7.github.io/rigged"><button id="rigged">RIGGED GAME</button></a>
 		<a href="https://emperorbob7.github.io/Bobbf"><button id="bobbf">BOBBF</button></a>
+		<a href="https://emperorbob7.github.io.passwordalgorithm"><button id="password">PASSWORD</button></a>
 	</div>
 	<div id="main">
 		<h2 style="margin-top:10px;">Please Use The Nav Buttons To Find Your Way Around</h2>
