--- a/JoJoGame/index.html
+++ b/JoJoGame/index.html
@@ -31,6 +31,6 @@
 		</div>
 		
 		<button id="resetscore" onclick="resetScore()">Reset Score</button>
-		<img src="ger.png" id="ger" />
+		<img src="https://steamuserimages-a.akamaihd.net/ugc/955223229303103826/9A968BAA5E9CC6F2DD2CE0DC16CCB56B3B0C3B87/" id="ger" />
 	</body>
 </html>
