--- a/JSheets/index.html
+++ b/JSheets/index.html
@@ -8,8 +8,19 @@
 	<body>
 		<input type="text" id="typer"/>
 		<button onclick="submitVal()">Submit</button>
+		<!--Text Color Selector-->
+		<div class="colors">
+			<p>A</p>
+			<input type="color" id="colorSelector" onchange="cChange()" value="#000000"/>
+		</div>
+		<!--Background Color Selector-->
+		<div class="colors">
+			<img src="paintbucket.png" width="20px" height="18px"/>
+			<input type="color" id="bcSelector" onchange="bcChange()" value="#555555"/>
+		</div>
 		<br /><br />
 		<table id="table"></table>
 		<p>Stable but useless build. Click a cell, type what you want, and press submit.</p>
+		<p id="a"></p>
 	</body>
 </html>
