Add Row and Column Update

--- a/JSheets/index.html
+++ b/JSheets/index.html
@@ -23,6 +23,10 @@
 		<button onclick="changeAlign('center')">Center</button>
 		<button onclick="changeAlign('right')">Right</button>
 		<br /><br />
+		<!--Temporary Row and Col Buttons-->
+		<button onclick="addRow()">Add Row</button>
+		<button onclick="addCol()">Add Col</button>
+		<!---->
 		<table id="table"></table>
 		<p>Stable but useless build. Click a cell, type what you want, and press submit.</p>
 		<p id="a"></p>
